@@ -1,3 +1,7 @@
+2025-09-03  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated OpenLibrary source to fetch notes (Bug 509062).
+
 2025-08-31  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated OpenLibrary source to update via OLID, if available (Bug 508897).
